1998-06-07    <braam@carissimi.coda.cs.cmu.edu>

	* kernel-src/vfs/linux21/psdev.c Moved entry for /proc/fs to the
	proc filesystem directory.  
	* kernel-src/vsf/linux21/dir.c: fixed the nasty segfault caused by
	positive error return in coda_lookup. Cleaned up the interruption
	code.  

1998-06-06  Peter Braam  <braam@motet.coda.cs.cmu.edu>

	* coda-src/scripts/venus-setup: chmod 600 /dev/cfs0 !!!
	* coda-src/venus/vproc.h: for Linux CRTORUID for Linux should use
	fsuid. This allows Samba exporting of /coda 

1998-06-03  Peter Braam  <braam@motet.coda.cs.cmu.edu>

	* Fix to BOGUS/NAKIT macros. There are many unsafe macros in rpc2.  These are the 
	most important ones and we have made them safe.  This was responsible for numerous
	errors.

1998-05-27    <braam@carissimi.coda.cs.cmu.edu>

	* rvm-src/configure.in/Makeconf: revamped the building process
	of the threaded rvm/rds libraries to stop using symbolic links.
	* volutil/vol-setlogparms.cc: VMRES flag was made obsolete, and 
	"or-ing" the flags changed to assignment.

1998-05-18    <braam@ptar.stelias.com>

	* got rid of /vice/db/hosts.  Names in /vice/db/servers
	must now be equal to those in the VSGDB. This involved minor
	changes in vol/volume.cc
	* changed SIGSTP to SIGUSR and added a routine UtilDetach which
	does setsid  to: updatesrv, updateclnt, auth2. 
	* changed srv to codasrv
	* vice-setup-rvm exits if srv.conf exists

1998-05-14    <braam@carissimi.coda.cs.cmu.edu>

	* increased the stack of advice_daemon in Venus to 0x4000. Stack
	overflow was caused by several char[MAXPATHLEN] on the stack. 
	* increased the stacksize of various things in advice_srv
	* asked advice_srv to exit if Gui falls over
	* Fixed some missing code in advice/conversions.cc
	* Guidir: beginning of better handling of PATHS and 
	GetServerInformation. advice_srv now works .. at CMU for Peter...
	* Makeconf Eliots problem with VPATH/INCLFLAGS. fixed.
	* lwp.c correct initialization of lwp_logfile. 
